# racehound

./: AUTHORS  CMakeLists.txt  README  README.md  config.h.in
arch/x86/include/kedr/asm/: inat.h  insn.h
arch/x86/lib/: inat.c  insn.c
cmake/kmodule_sources/check_kernel_config/: module.c
cmake/modules/: cmake_useful.cmake  kbuild_system.cmake  kmodule.cmake  path_prefixes.cmake
cmake/modules/kmodule_files/: CMakeLists.txt
cmake/other_sources/: dwfl_report_elf_check.c  libdw_check.c  libelf_check.c
common/: gen-insn-attr-x86.awk  inat.c  inat.h  insn.c  insn.h  util.c  util.h  x86-opcode-map.txt
core/: CMakeLists.txt  bp.c  bp.h  decoder.c  decoder.h  functions.c  insn_analysis.c  insn_analysis.h  racehound_main.c  reinst.sh  rhound.c  sections.c  stackdepot.c  stackdepot.h  sw_breakpoints.h  thunks.S  wrapper.S
core/arch/x86/lib/: inat.c  x86-opcode-map.txt
core/arch/x86/tools/: gen-insn-attr-x86.awk
core/test/: hello.c  plus.sh
core/tests/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  CMakeLists.txt  hello.c  minus.sh  plus.sh  test.sh.in
core/tests/.tmp_versions/: hello.mod
core/tests/atomic/: CMakeLists.txt  atomic.c  minus.sh  test.atomic.sh.in
core/tests/basics/: CMakeLists.txt  breakpoints-all-x32.list  breakpoints-all-x64.list  breakpoints-single-x32.list  breakpoints-single-x64.list  minus.sh  minus_infinite.sh  plus_infinite.sh  test.sh.in  test_active.sh.in  test_modules.sh.in
core/tests/common_target/: CMakeLists.txt  Kbuild.in  cfake.c  lines.list  module.makefile.in
core/tests/simple/: CMakeLists.txt  breakpoints-all-x32.list  breakpoints-all-x64.list  breakpoints-single-x32.list  breakpoints-single-x64.list  lines.list  module.c  plus.sh  test.sh.in
core/um_helpers/: CMakeLists.txt  rh_get_sections.sh.in
examples/: check_races.py  events.py  manage_bps.py
kernel_patches/: Readme.txt
kernel_patches/for_4.1.y/: 0001-kprobes-x86-boost-Fix-checking-if-there-is-enough-ro.patch  0002-kprobes-x86-Use-16-bytes-for-each-instruction-slot-a.patch  Readme.txt
kernel_patches/kernel_4.1-4.3/: Readme.txt
lines2insns/: CMakeLists.txt  config_lines2insns.h.in  main.cpp
lines2insns/tests/: CMakeLists.txt  lines01.list  test.sh.in
ma_lines/: CMakeLists.txt  Readme.txt  common_includes.h  ma_lines.cpp
ma_lines/tests/: CMakeLists.txt  Kbuild.in  test.sh.in
ma_lines/tests/sample_target/: CMakeLists.txt  Kbuild.in  Makefile.mk
racehound/: Makefile  bp.h  functions.h  reinst.sh  rhound.c  sections.c  sections.h
racehound/arch/x86/include/kedr/asm/: inat.h  inat_types.h  insn.h
racehound/arch/x86/lib/: insn.c
racehound/test/: minus.sh
